# NeuralODE

./: .gitignore  Embs.ipynb  README.md  eda.ipynb  exp_config.json  prepair_data.py  pyproject.toml  results.ipynb  results.py  runer.py  setup.py  testODE.py
data/: agro.parquet  climate.parquet  embeddings.npz  new_agro2.parquet  norm.npz  soil_info.parquet
data/dataset/: 22559_2007-05-17_2007-05-28.npz  22559_2007-05-28_2007-06-07.npz  22559_2007-06-07_2007-06-17.npz  22559_2007-06-17_2007-06-27.npz  22559_2007-06-27_2007-07-07.npz  22559_2008-05-28_2008-06-07.npz  22559_2008-07-07_2008-07-17.npz  22559_2008-07-17_2008-07-28.npz  22559_2008-07-28_2008-08-07.npz  22559_2008-08-07_2008-08-17.npz  22559_2008-08-17_2008-08-28.npz  22559_2009-05-28_2009-06-07.npz  22559_2009-06-07_2009-06-17.npz  22559_2009-06-17_2009-06-27.npz  22559_2009-07-17_2009-07-28.npz  22559_2009-07-28_2009-08-07.npz  22559_2009-08-07_2009-08-17.npz  22559_2009-08-17_2009-08-28.npz  22559_2010-05-28_2010-06-07.npz  22559_2010-06-07_2010-06-17.npz  22559_2010-06-17_2010-06-27.npz  22559_2010-07-17_2010-07-28.npz  22559_2010-07-28_2010-08-07.npz  22559_2010-08-07_2010-08-17.npz  22559_2011-06-17_2011-06-27.npz  22559_2011-06-27_2011-07-07.npz  22559_2011-07-07_2011-07-17.npz  22559_2011-07-17_2011-07-28.npz  (+43118 more)
notebooks/: checkData.ipynb  geo.ipynb  metrics-accum.ipynb  prep-data.ipynb  results.ipynb  sample.ipynb
src/: experiment.py  experiment_1.py  gui_experiment.py  gui_experiment_1.py  prep_data.py  prepair_data.py  testODE.py  validate.py  validate2.py
tools/: misc.py  model.py  solvers.py
(+79655 files in other folders)
