[tool.poetry]
name = "NeuralODE"
version = "0.0.1"
description = "Прогнозирование ЗПВ методами нейронных дифференциальных уравнений"
authors = ["Голов В.А. ИММО-02-20"]

[tool.poetry.dependencies]
python = "^3.8.5"

pandas = "^1.3.3"
pyarrow = "^4.0.1"
numpy = "^1.19.5"
netCDF4 = "^1.5.7"
argparse = "^1.4.0"
imageio = "^2.9.0"
pathlib = "^1.0.1"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
torch = "^1.9.1"
tqdm = "^4.62.3"
torchdiffeq = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"