[tool.poetry]
name = "NeuralODE"
version = "0.0.1"
description = "Прогнозирование ЗПВ методами нейронных дифференциальных уравнений"
authors = ["Голов В.А."]

[tool.poetry.dependencies]
python = "^3.9.7"

pandas = "^1.3.3"
pyarrow = "^4.0.1"
numpy = "^1.19.5"
scipy = ""
netCDF4 = "^1.5.7"
argparse = "^1.4.0"
imageio = "^2.9.0"
#pathlib = "^1.0.1"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
torch = "^1.9.1"
tqdm = "^4.62.3"
torchdiffeq = "^0.2.2"
torchmetrics = "^0.8.0"
streamlit = ""
importlib-resources = "^5.4.0"
"backports.weakref" = "^1.0.post1"
"backports.zoneinfo" = "^0.2.1"
watchdog = "^2.1.6"
"tensorboard" = "^2.8.0"
"geotiff" = ""
imagecodecs = "^2022.2.22"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
